--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Mariia Shkolnykova"
-  avatar           : "profile.png"
+  avatar           : "profile_pic.jpg"
   bio              : "I am an economist, working in the field of economics of innovation and structural change. I am especially interested in innovation emergence and diffusion, specifically for the case of new and high-tech industries. My further research interests include topics related to entrepreneurship, regional development, firm (innovation) strategy and new indicators of innovation measurement."
   location         : "Bremen, Germany"
   employer         : "University of Bremen"
